--- a/templates/product.html
+++ b/templates/product.html
@@ -10,67 +10,32 @@
           <div class="col-md-12">
             <div class="section-heading">
               <div class="line-dec"></div>
-              <h1>Single Product</h1>
+              <h1>Товар</h1>
             </div>
           </div>
           <div class="col-md-6">
             <div class="product-slider">
               <div id="slider" class="flexslider">
-                <ul class="slides">
-                  <li>
-                    <img src="{% static 'assets/images/big-01.jpg'%}" />
-                  </li>
-                  <li>
-                    <img src="{% static 'assets/images/big-02.jpg'%}" />
-                  </li>
-                  <li>
-                    <img src="{% static 'assets/images/big-03.jpg'%}" />
-                  </li>
-                  <li>
-                    <img src="{% static 'assets/images/big-04.jpg'%}" />
-                  </li>
-                  <!-- items mirrored twice, total of 12 -->
-                </ul>
-              </div>
-              <div id="carousel" class="flexslider">
-                <ul class="slides">
-                  <li>
-                    <img src="{% static 'assets/images/thumb-01.jpg'%}" />
-                  </li>
-                  <li>
-                    <img src="{% static 'assets/images/thumb-02.jpg'%}" />
-                  </li>
-                  <li>
-                    <img src="{% static 'assets/images/thumb-03.jpg'%}" />
-                  </li>
-                  <li>
-                    <img src="{% static 'assets/images/thumb-04.jpg'%}" />
-                  </li>
-                  <!-- items mirrored twice, total of 12 -->
-                </ul>
+                {% if product.image %}
+                    <img src="{{ product.image.url }}"
+                    alt="{{ product.name }}">
+                {% else %}
+                {% static 'assets/images/default.png' %}
+                {% endif %}
+                 <h4>{{ product.name }}</h4>
+                <h6>{{ product.price }}тг.</h6>
               </div>
             </div>
           </div>
           <div class="col-md-6">
             <div class="right-content">
-              <h4>Single Product Name</h4>
-              <h6>$55.00</h6>
-              <p>Proin commodo, diam a ultricies sagittis, erat odio rhoncus metus, eu feugiat lorem lacus aliquet arcu. Curabitur in gravida nisi, non placerat nibh. Praesent sit amet diam ultrices, commodo turpis id, dignissim leo. Suspendisse mauris massa, porttitor non fermentum vel, ullamcorper scelerisque velit. </p>
-              <span>7 left on stock</span>
-              <form action="" method="get">
-                <label for="quantity">Quantity:</label>
-                <input name="quantity" type="quantity" class="quantity-text" id="quantity" 
-                	onfocus="if(this.value == '1') { this.value = ''; }" 
-                    onBlur="if(this.value == '') { this.value = '1';}"
-                    value="1">
-                <input type="submit" class="button" value="Order Now!">
-              </form>
+              <h4>{{ product.name }}</h4>
+              <h6>{{ product.price }} тг</h6>
+              <p>{{ product.description }}</p>
+              <span>{{ product.quantity }} шт</span>
               <div class="down-content">
                 <div class="categories">
-                  <h6>Category: <span><a href="#">Pants</a>,<a href="#">Women</a>,<a href="#">Lifestyle</a></span></h6>
-                </div>
-                <div class="share">
-                  <h6>Share: <span><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-twitter"></i></a></span></h6>
+                  <h6>Категория: <span><a href="#">{{ product.category.name }}</a></span></h6>
                 </div>
               </div>
             </div>
