--- a/templates/products.html
+++ b/templates/products.html
@@ -9,15 +9,15 @@
           <div class="col-md-4 col-sm-12">
             <div class="section-heading">
               <div class="line-dec"></div>
-              <h1>Featured Items</h1>
+              <h1>Товары</h1>
             </div>
           </div>
           <div class="col-md-8 col-sm-12">
             <div id="filters" class="button-group">
-              <button class="btn btn-primary" data-filter="*">Все Продукты</button>
-              <button class="btn btn-primary" data-filter=".new">Новые</button>
-              <button class="btn btn-primary" data-filter=".low">Самые Дешевые</button>
-              <button class="btn btn-primary" data-filter=".high">Самыe Дорогие</button>
+              <button class="btn btn-primary" data-filter="*">Все</button>
+                {% for category in categories %}
+                    <button class="btn btn-primary" data-filter=".new">{{ category.name }}</button>
+                {% endfor %}
             </div>
           </div>
         </div>
